# autoresearch-ANE

./: .gitignore  README.md  README_MAC.md  ane_benchmark.py  ane_bridge.py  ane_inference.py  bench_ane.sh  convert_to_coreml.py  prepare.py  pyproject.toml  train_mac.py
docs/plans/: 2026-03-08-ane-karpathy-data-bridge.md
native/: Makefile
native/mil/: ane_mil_gen.h  mil_dynamic.h
native/probes/: api_exploration.m  inmem_basic.m  inmem_bench.m  inmem_peak.m  sram_bench.m  sram_probe.m  test_weight_reload.m
native/runtime/: stories_io.h
native/training/: stories_config.h  stories_cpu_ops.h  train.m
native/training/models/: gpt_autoresearch.h
reports/pastebacks/: mlx_mps_enablement.md
results/: README.md
results/mps_pretest/: results.md  train_mps.py
viz/: ane_karpathy_comparison.py  ane_progress.py
